--- a/cartesian_vector_param/CMakeLists.txt
+++ b/cartesian_vector_param/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.0)
-project(cartesian_vector_param)
 
-set(CMAKE_CXX_STANDARD 14)
+# set the project name
+project(main)
 
-add_executable(main vector.cpp main.cpp)
+# add the executable
+add_executable(main vector.cpp main.cc )
