--- a/cartesian_vector_variable/CMakeLists.txt
+++ b/cartesian_vector_variable/CMakeLists.txt
@@ -1,8 +1,7 @@
 cmake_minimum_required(VERSION 3.0)
 
-set(CMAKE_CXX_STANDARD 14)
-set(CMAKE_CXX_STANDARD_REQUIRED True)
+# set the project name
+project(main)
 
-project(cartesian_vector_variable)
-
-add_executable(main main.cc vector.cc)
+# add the executable
+add_executable(main vector.cpp main.cc )
